# rgsplat

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: release.yml
docs/: CNAME  docs.html  index.html  styles.css
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs  python.rs
src/cpu/: backward.rs  mod.rs  rasterizer.rs
src/gpu/: compute.rs  context.rs  mod.rs  sort.rs  splat.wgsl
src/io/: cameras.rs  images.rs  mod.rs  ply.rs
src/math/: covariance.rs  mod.rs  projection.rs  quaternion.rs  sh.rs
src/pipeline/: mod.rs  optimizer.rs  sfm.rs
tests/: gpu_smoke.rs  training_reduces_loss.rs
